--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -12,7 +12,9 @@
   font-weight: bold;
 }
 
-.button:hover,
+.button:hover{
+  background-color: #4a13b1;
+}
 .button:active {
   background-color: #2c0d00;
 }
